# rust_task_tracker

./: Cargo.toml  data.json
src/: main.rs  task_class.rs
static/: index.html
