[package]
name = "task-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = {version="1.0.99"}
serde = {version="1.0.99", features=["derive"]}
chrono = {version="0.4", features=["serde"]}

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid", 
  "chrono", 
  "time"
] }
tokio = { version = "1.0", features = ["full"] }
